--- a/index.html
+++ b/index.html
@@ -10,19 +10,28 @@
             const i = Math.random() * (a.length - 1) | 0;
             console.debug(i);
             return a[i];
-        }
+        };
+
+        const types = {
+            expectArray(x) {
+                return Array.isArray(x) ? x : (() => { throw new TypeError("Response isn't an array"); } )();
+            }
+        };
 
         const getModifierJSON = () => fetch("https://raw.githubusercontent.com/KisaragiEffective/random-name-generator/v1.0/data/modifier.json")
             .then(x => x.json())
-            .then(x => Array.isArray(x) ? x : (() => { throw new TypeError("Response isn't an array"); } )());
+            .then(types.expectArray);
 
         const getNounJson = () => fetch("https://raw.githubusercontent.com/KisaragiEffective/random-name-generator/v1.0/data/noun.json")
             .then(x => x.json())
-            .then(x => Array.isArray(x) ? x : (() => { throw new TypeError("Response isn't an array"); } )());
+            .then(types.expectArray);
 
-        const jsonCache = { modifier: undefined, noun: undefined };
+        const jsonCache = Object.seal({
+            modifier: undefined,
+            noun: undefined,
+        });
         window.addEventListener("DOMContentLoaded", () => {
-            console.log("loaded");
+            console.debug("loaded");
             document.getElementById("new").addEventListener("click", () => {
                 console.log("clicked");
                 Promise.all([getModifierJSON(), getNounJson()])
@@ -38,7 +47,7 @@
                 jsonCache.modifier = undefined;
                 jsonCache.noun = undefined;
                 document.getElementById("purgecache").disabled = true;
-            })
+            });
         });
     </script>
 </head>
