--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             }
         };
 
-        const getModifierJSON = () => fetch("https://raw.githubusercontent.com/KisaragiEffective/random-name-generator/v1.0/data/modifier.json")
+        const getModifierJSON = () => fetch("https://raw.githubusercontent.com/KisaragiEffective/random-name-generator/master/data/modifier.json")
             .then(x => x.json())
             .then(types.expectArray);
 
-        const getNounJson = () => fetch("https://raw.githubusercontent.com/KisaragiEffective/random-name-generator/v1.0/data/noun.json")
+        const getNounJson = () => fetch("https://raw.githubusercontent.com/KisaragiEffective/random-name-generator/master/data/noun.json")
             .then(x => x.json())
             .then(types.expectArray);
 
@@ -33,8 +33,11 @@
         window.addEventListener("DOMContentLoaded", () => {
             console.debug("loaded");
             document.getElementById("new").addEventListener("click", () => {
-                console.log("clicked");
-                Promise.all([getModifierJSON(), getNounJson()])
+                console.debug("clicked");
+                Promise.all([
+                    jsonCache.modifier ?? getModifierJSON(),
+                    jsonCache.noun ?? getNounJson()
+                ])
                     .then(([m, n]) => {
                         jsonCache.modifier ??= m;
                         jsonCache.noun ??= n;
